# proto-bgfx

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.autosave  Findbgfx.cmake  README.md  main.cpp  manualCompileShaders.sh
Assets/McGuire/: README.md
Assets/McGuire/Crytek_Sponza/: sponza-blend.mtl
Assets/McGuire/gallery/: gallery.mtl
Assets/McGuire/sponza/: sponza.mtl
Assets/McGuire/sponzaBlender/: sponza.mtl
Assets/McGuire/teapot/: default.mtl
Assets/Sponza/: sponza.mtl
Assets/Sponza2/: README.md  sponza.mtl  sponza.mtl.default
assets/sponza/: sponza.mtl
cmake/: Findbgfx.cmake  Shader.cmake  bgfxUtils.cmake  examples.cmake  findbgfx.cmake  shader.cmake
examples/00-helloworld/: helloworld.cpp  main.cpp
examples/01-drawQuad/: drawQuad.cpp
examples/02-sponza/: sponza.cpp
examples/03-branchingTests/: branchingTests.cpp
examples/04-nothingToDo/: nothingToDo.cpp
examples/05-shadow/: shadow.cpp
examples/06-sanMiguel/: sanMiguel.cpp
examples/06-sanMiguel-fastBlinn/: sanMiguel_fastBlinn.cpp
examples/07-sanMiguel/: sanMiguel.cpp
examples/assets/San_Miguel/: license.txt  san-miguel.mtl
shaders/src/: blinnphong.vert.sc  blinnphong_frag.sc  branchingTest1.frag.sc  branchingTest1.vert.sc  branchingTest2.frag.sc  branchingTest2.vert.sc  branchingTest3.frag.sc  cubes.frag.sc  cubes.vert.sc  debugQuad.frag.sc  debugQuad.vert.sc  fast.frag.sc  fast.vert.sc  fastBlinn.frag.sc  light.sc  lookDev_frag.sc  manualCompileShaders.sh  material.frag.sc  material.sc  material.vert.sc  mesh.frag.sc  mesh_vert.sc  normal.frag.sc  normal.vert.sc  rendered.frag.sc  rendered.vert.sc  script.sh  shadow.frag.sc  shadow.vert.sc  uniforms.sc  varying.def.sc  vertigo.frag.sc  vertigo.vert.sc
shaders/src/shading/: material.frag.sc  material.vert.sc  rendered.frag.sc
src/: CMakeLists.txt  FileSystem.h  Findbgfx.cmake  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Object.cpp  Object.h  Program.cpp  Program.h  Scene.cpp  Scene.h  Session.cpp  Session.h  System.h  Texture.cpp  Texture.h  Vertex.cpp  Vertex.h  dirLight.h  fileIO.cpp  fileIO.h  light.h  main.cpp  material.cpp  material.h  mesh.cpp  mesh.h  object.cpp  object.h  program.cpp  program.h  scene.cpp  scene.h  system.h  texture.cpp  texture.h  timerUtil.h  utility.h  (+1 more)
src/engine/: camera.cpp  camera.h  camerafps.cpp  camerafps.h  dirLight.cpp  dirLight.h  geometry.cpp  geometry.h  light.cpp  light.h  material.cpp  material.h  mesh.cpp  mesh.h  object.cpp  object.h  pointlight.cpp  pointlight.h  program.cpp  program.h  scene.cpp  scene.h  spotlight.cpp  spotlight.h  texture.cpp  texture.h  vertex.h  windowstate.cpp  windowstate.h
src/entry/: entry.cpp  entry.h  entry_glfw.cpp  entry_qt.cpp  windowstate.cpp  windowstate.h
src/gui/: mainwindow.cpp  mainwindow.h  mainwindow.ui  qopenglwidgetbgfx.cpp  qopenglwidgetbgfx.h  qwidgetbgfx.cpp  qwidgetbgfx.h
